feat: move to junit5 and update deps